@@ -12,6 +12,11 @@ contrib
 build loop
 ======================
 
+configxml.html:
+----------------------
+* Fix broken links to the puligin classes' javadoc
+* cvs was renamed ConcurrentVersionsSystem
+
 ExecBuilder:
 ----------------------
 * New plug-in for executing a specified command as the build action (CC-317). Submitted by Kevin Lee
